--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,15 @@ body{
   background:#544947;
   font-family:Montserrat,Arial,sans-serif;
 }
+label{
+  background-color: #e67354;
+  padding: 2px;
+  border-radius: 10% 0% 0% 0%;
+}
 
 input{
 background-color: #e67354;
-
+border: none;
 }
 
 
@@ -25,7 +30,7 @@ h2{
 }
 
 .upper{
-  border-radius:5px 5px 0 0;
+  border-radius: 2% 2% 0% 0%;
   background:#f5f5f5;
   height:200px;
   padding:20px;
