--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,16 @@ body{
 label{
   background-color: #e67354;
   padding: 2px;
-  border-radius: 10% 0% 0% 0%;
+  border-radius: 8% 0% 0% 0%;
 }
 
 input{
 background-color: #e67354;
 border: none;
+border-radius: 0% 12% 0% 0%;
+width: 389px;
+height: 23px;
+
 }
 
 
@@ -22,7 +26,7 @@ h2{
   font-size:14px;
 }
 .widget{
-  box-shadow:0 40px 10px 5px rgba(0,0,0,0.4);
+  box-shadow:0 40px 10px 5px rgba(0, 0, 0, 0.4);
   margin:100px auto;
   height: 330px;
   position: relative;
@@ -30,7 +34,6 @@ h2{
 }
 
 .upper{
-  border-radius: 2% 2% 0% 0%;
   background:#f5f5f5;
   height:200px;
   padding:20px;
